syntax = "proto3";
package rpc_pb;

message PagerReq {
	string id=1;
	string key =2;
	string order_field =3;
	string desc =4;
	int64 start =5;
	int64 length =6;
	int64 user_id =7;
	string message =8;
	string status =9;
	string org_id =10;
	string query_user_id =11;
}

message PagerResp {
	string data=1;
    int64 total =2;
    int64 page_total=3;
}
message Req {
	string message=1;
	int64 user_id=2;
}
message Resp {
	string message=1;
}